--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -1,2 +1,4 @@
 @import "../../components/page-wrapper/index.css";
 @import "../../components/navigation/index.css";
+@import "../../components/cms-content/index.css";
+@import "../../components/footer/index.css";
