--- a/src/components/navigation/index.css
+++ b/src/components/navigation/index.css
@@ -1,12 +1,17 @@
 .navigation {
   display: flex;
-  max-width: 600px;
-  margin: 0 auto;
   background-color: #1c821d;
+  margin-bottom: 20px;
 }
 
 .navigation__link {
-  padding: 10px;
+  margin: 5px;
+  padding: 5px;
   color: #FFFFFF;
   text-decoration: none;
+  border-bottom: 2px solid transparent;
+}
+
+.navigation__link:hover {
+  border-bottom-color: #FFFFFF;
 }
