add unionen looks

--- a/src/components/navigation/index.css
+++ b/src/components/navigation/index.css
@@ -15,3 +15,8 @@
 .navigation__link:hover {
   border-bottom-color: #FFFFFF;
 }
+
+.navigation__link:first-child {
+  margin-left: 0;
+  padding-left: 0;
+}
