--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -2,3 +2,4 @@
 @import "../../components/navigation/index.css";
 @import "../../components/cms-content/index.css";
 @import "../../components/footer/index.css";
+@import "../../components/header/index.css";
