--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -1,4 +1,9 @@
 .footer {
-  text-align: center;
   padding-bottom: 40px;
+  background-color: #564C47;
+  text-align: center;
+}
+
+.footer__link {
+  color: #FFFFFF;
 }
