--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -3,3 +3,4 @@
 @import "../../components/cms-content/index.css";
 @import "../../components/footer/index.css";
 @import "../../components/header/index.css";
+@import "../../components/main-content/index.css";
