--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -4,3 +4,10 @@
 @import "../../components/footer/index.css";
 @import "../../components/header/index.css";
 @import "../../components/main-content/index.css";
+@import "../../components/paragraph/index.css";
+@import "../../components/button/index.css";
+@import "../../components/h1/index.css";
+@import "../../components/h2/index.css";
+@import "../../components/h3/index.css";
+@import "../../components/image/index.css";
+@import "../../components/image-gallery/index.css";
