--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -3,24 +3,16 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  margin-bottom: 20px;
-  font-size: 22px;
-}
-
-h2 {
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-h3 {
-  margin-bottom: 20px;
-  font-size: 18px;
-}
-
-p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   max-width: 600px;
-  margin: 0 0 20px;
+  margin: 0 auto 20px;
+  padding: 0 10px;
+  font-family: verdana, arial, sans-serif;
   line-height: 1.25;
 }
 
