styles, dev server

--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,17 +1,26 @@
 .header {
-  padding-top: 10px;
   background-color: #1c821d;
 }
 
 .header__inner{
-  max-width: 800px;
+  max-width: 820px;
   margin: 0 auto;
+  padding: 10px;
 }
 
 .header__link {
+  display: block;
   text-decoration: none;
+  margin-bottom: 20px;
+}
+
+.header__logo {
+  display: block;
+  margin-bottom: 10px;
 }
 
 .header__logo-text {
+  margin: 0;
+  padding: 0;
   color: #FFFFFF;
 }
