--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -9,9 +9,8 @@ h3,
 h4,
 h5,
 h6 {
-  max-width: 800px;
-  margin: 0 auto 20px;
-  padding: 0 10px;
+  margin: 0 0 20px;
+  padding: 0;
   font-family: verdana, arial, sans-serif;
   line-height: 1.25;
 }
