--- a/src/components/navigation/index.css
+++ b/src/components/navigation/index.css
@@ -1,10 +1,9 @@
 .navigation {
-  display: flex;
-  background-color: #1c821d;
-  margin-bottom: 20px;
+
 }
 
 .navigation__link {
+  display: inline-block;
   margin: 5px;
   padding: 5px;
   color: #FFFFFF;
