--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,17 +1,17 @@
 .header {
   background-color: #1c821d;
+  background-image: linear-gradient(#1c821d, #59ba06);
 }
 
 .header__inner{
-  max-width: 820px;
+  max-width: 840px;
   margin: 0 auto;
-  padding: 10px;
 }
 
 .header__link {
   display: block;
   text-decoration: none;
-  margin-bottom: 20px;
+  padding: 20px 10px 40px;
 }
 
 .header__logo {
