--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -11,3 +11,4 @@
 @import "../../components/h3/index.css";
 @import "../../components/image/index.css";
 @import "../../components/image-gallery/index.css";
+@import "../../components/file-list/index.css";
