some styling and validation started

--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -15,3 +15,4 @@
 @import "../../components/text-input/index.css";
 @import "../../components/textarea/index.css";
 @import "../../components/submit-button/index.css";
+@import "../../components/form/index.css";
