--- a/src/components/submit-button/index.css
+++ b/src/components/submit-button/index.css
@@ -2,14 +2,14 @@
   display: block;
   padding: 10px 40px;
   margin-bottom: 20px;
-  background-color: #307d30;
+  background-color: #0082A9;
   color: #FFFFFF;
-  border: 1px solid #444444;
+  border: 1px solid #CCCCCC;
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
 }
 
 .submit-button:hover {
-  background-color: #50b450;
+  background-color: #1098c1;
 }
