--- a/src/components/text-input/index.css
+++ b/src/components/text-input/index.css
@@ -1,18 +1,27 @@
 .text-input {
   width: 100%;
+  margin-bottom: 20px;
+}
+
+.text-input.hidden {
+  display: none;
 }
 
 .text-input__label {
   display: block;
   margin-bottom: 3px;
+  font-size: 16px;
 }
 
 .text-input__input {
   display: block;
   width: 100%;
   padding: 10px;
-  border: 1px solid #444444;
-  border-radius: 5px;
-  margin-bottom: 15px;
-  font-size: 20px;
+  border: 1px solid #CCCCCC;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+.text-input__error {
+  color: red;
 }
