--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -16,3 +16,4 @@
 @import "../../components/textarea/index.css";
 @import "../../components/submit-button/index.css";
 @import "../../components/form/index.css";
+@import "../../components/download-button/index.css";
