--- a/src/components/file-list/index.css
+++ b/src/components/file-list/index.css
@@ -3,13 +3,9 @@
 
 .file-list__item {
   position: relative;
-  margin-left: 30px;
+  margin-bottom: 20px;
 }
 
-.file-list__item::before {
-  position: absolute;
-  top: 0;
-  left: -30px;
-  color: #111111;
-  content: "\25b6";
+.file-list__item-title {
+  margin-bottom: 3px;
 }
