--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -17,3 +17,5 @@
 @import "../../components/submit-button/index.css";
 @import "../../components/form/index.css";
 @import "../../components/download-button/index.css";
+@import "../../components/navigation-secondary/index.css";
+@import "../../components/teaser/index.css";
