--- a/src/components/teaser/index.css
+++ b/src/components/teaser/index.css
@@ -4,10 +4,8 @@
   justify-content: space-between;
   width: 250px;
   height: 300px;
-  background-color: #EEEEEE;
   border: 1px solid #CCCCCC;
   margin: 10px;
-  padding: 10px;
   cursor: pointer;
 }
 
@@ -18,7 +16,6 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  margin-bottom: 5px;
 }
 
 .teaser__image::before {
@@ -38,10 +35,13 @@
 
 .teaser__text-wrapper {
   display: flex;
+  height: 150px;
   flex-direction: column;
   justify-content: space-between;
+  padding: 10px;
 }
 
 .teaser__sub-title {
+  margin: 0;
   color: #777777;
 }
