--- a/src/components/image-gallery/index.css
+++ b/src/components/image-gallery/index.css
@@ -1,10 +1,3 @@
-.image-gallery {
-  max-width: 820px;
-  margin: 0 auto;
-}
-
-.image-gallery__item {
-  display: inline-block;
-  max-width: 150px;
-  margin: 0 10px 10px;
+.image-gallery__image {
+  width: 150px;
 }
