--- a/src/components/teaser/index.css
+++ b/src/components/teaser/index.css
@@ -1,47 +1,49 @@
 .teaser {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 250px;
-  height: 300px;
-  border: 1px solid #CCCCCC;
-  margin: 10px;
-  cursor: pointer;
+  display: inline-block;
+  flex: 0 0 300px;
+  height: 200px;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
 .teaser__image {
   position: relative;
-  width: 100%;
   height: 150px;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  margin-bottom: 3px;
 }
 
-.teaser__image::before {
+.teaser__image::after {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
+}
+
+.teaser__cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: #FFF;
+  border: 1px solid #EEE;
+  padding: 10px;
   transition: all 0.2s ease-in;
 }
 
-.teaser:hover .teaser__image::before {
-  background-color: rgba(0, 0, 0 , 0);
+.teaser:hover .teaser__cta {
+  background-color: #FFF;
+  color: #000;
 }
 
-.teaser__text-wrapper {
-  display: flex;
-  height: 150px;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10px;
-}
-
-.teaser__sub-title {
-  margin: 0;
-  color: #777777;
+.teaser__title {
+  height: 50px;
+  text-decoration: none;
+  color: #000;
 }
