--- a/src/components/main-content/index.css
+++ b/src/components/main-content/index.css
@@ -2,5 +2,6 @@
   min-height: 80vh;
   max-width: 820px;
   margin: 0 auto;
-  padding: 40px 10px 0;
+  padding: 40px 20px 40px;
+  background-color: #FEFEFE;
 }
