--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -11,7 +11,7 @@
 .header__link {
   display: block;
   text-decoration: none;
-  padding: 20px 10px 40px;
+  margin: 20px 10px 40px;
 }
 
 .header__logo {
