--- a/src/components/main-content/index.css
+++ b/src/components/main-content/index.css
@@ -1,7 +1,8 @@
 .main-content {
   min-height: 80vh;
   max-width: 820px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   padding: 40px 20px 40px;
   background-color: #FEFEFE;
+  box-shadow: 0px 0px 2px 0px;
 }
