--- a/src/components/download-button/index.css
+++ b/src/components/download-button/index.css
@@ -1,5 +1,5 @@
 .download-button {
-  display: block;
+  display: inline-block;
   padding: 10px 40px;
   background-color: #0082A9;
   color: #FFFFFF;
@@ -7,6 +7,7 @@
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .download-button:hover {
